# little_weather_assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c
main/hardware/gxhtc3/: bsp_gxhtc3.c  bsp_gxhtc3.h
main/hardware/hf_weather/: hf_weather.c  hf_weather.h
main/hardware/lcd/: bsp_lcd.c  bsp_lcd.h
main/hardware/myi2c/: bsp_myi2c.c  bsp_myi2c.h
main/hardware/net/: bsp_net.c  bsp_net.h
main/hardware/timer/: bsp_timer.c  bsp_timer.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
main/ui/fonts/: ui_font_Font20.c
main/ui/images/: ui_img_icon_100_64_png.c  ui_img_icon_101_64_png.c  ui_img_icon_102_64_png.c  ui_img_icon_103_64_png.c  ui_img_icon_104_64_png.c  ui_img_icon_150_64_png.c  ui_img_icon_153_64_png.c  ui_img_icon_154_64_png.c  ui_img_icon_300_64_png.c  ui_img_icon_301_64_png.c  ui_img_icon_302_64_png.c  ui_img_icon_303_64_png.c  ui_img_icon_304_64_png.c  ui_img_icon_305_64_png.c  ui_img_icon_306_64_png.c  ui_img_icon_307_64_png.c  ui_img_icon_308_64_png.c  ui_img_icon_309_64_png.c  ui_img_icon_310_64_png.c  ui_img_icon_311_64_png.c  ui_img_icon_312_64_png.c  ui_img_icon_313_64_png.c  ui_img_icon_314_64_png.c  ui_img_icon_315_64_png.c  ui_img_icon_316_64_png.c  ui_img_icon_317_64_png.c  ui_img_icon_318_64_png.c  ui_img_icon_350_64_png.c  ui_img_icon_351_64_png.c  ui_img_icon_399_64_png.c  ui_img_icon_400_64_png.c  ui_img_icon_401_64_png.c  ui_img_icon_402_64_png.c  ui_img_icon_403_64_png.c  ui_img_icon_404_64_png.c  (+43 more)
main/ui_function/: ui_func.c  ui_func.h
(+9 files in other folders)
